--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-03  Jean-François Wauthy <pollux@xfce.org>
+
+	* it.po: Add Italian translations by Dario <dariolinux@tiscali.it>
+
 2006-10-02  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ru.po: Updated Russian translations by Andrey Fedoseev
