--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-02-12	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/sylpheed-claws.desktop.in.in: Apply patch from
+	  Colin Leroy <colin@colino.net> to replace Sylpheed-Claws with Claws
+	  Mail. Bug #2851.
+	* po/libexo-0.3.pot, po/*.po: Merge new strings.
+
 2007-01-28	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-url.c(exo_url_show_on_screen): Apply patch from Peter de
