--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge new strings.
+
 2007-02-10  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* Modified LINGUAS files to include Albanian language,
@@ -6,7 +10,7 @@
 2007-02-08  Mohamed Magdy <mohamed.m.k@gmail.com>
 
 	* ar.po: initial commit.
-    *LINGUAS: adding ar language code
+	* LINGUAS: adding ar language code
 	
 2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
