--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* de.po: Brought some style in the German translation by
+	Nico Schümann <nico@prog.nico22.de>
+
 2007-02-22  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Updated Basque translation.
