--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-12 19:47+0100\n"
 "PO-Revision-Date:  2007-01-09 23:24+0100\n"
-"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
+"Last-Translator: Nico Schümann <nico@prog.nico22.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +40,7 @@ msgstr "Größe"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr "Die Größe in der das Symbol gezeichnet werden soll."
+msgstr "Die Größe, in der das Symbol gezeichnet werden soll."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:205
 #: ../exo/exo-mount-point.c:234 ../exo/exo-mount-point.c:392
@@ -63,7 +63,7 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:783
 msgid "Orientation"
-msgstr "Orientierung"
+msgstr "Ausrichtung"
 
 #: ../exo/exo-icon-bar.c:250
 msgid "The orientation of the iconbar"
@@ -83,7 +83,7 @@ msgstr "Textspalte"
 
 #: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:928
 msgid "Model column used to retrieve the text from"
-msgstr "Spalte für das Model, von der der Text geholt werden soll"
+msgstr "Spalte für das Modell, von der der Text geholt werden soll"
 
 #: ../exo/exo-icon-bar.c:295
 msgid "Icon Bar Model"
@@ -99,31 +99,31 @@ msgstr "Aktiv"
 
 #: ../exo/exo-icon-bar.c:313
 msgid "Active item index"
-msgstr "Index für das aktive Element"
+msgstr "Index des aktiven Elements"
 
 #: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
-msgstr "Füllfarbe für das aktive Element"
+msgstr "Füllfarbe des aktiven Elements"
 
 #: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
-msgstr "Randfarbe für das aktive Element"
+msgstr "Randfarbe des aktiven Elements"
 
 #: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
-msgstr "Textfarbe für das aktive Element"
+msgstr "Textfarbe des aktiven Elements"
 
 #: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
-msgstr "Füllfarbe für das Cursorelement"
+msgstr "Füllfarbe des Cursorelements"
 
 #: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
-msgstr "Randfarbe für das Cursorelement"
+msgstr "Randfarbe des Cursorelements"
 
 #: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
-msgstr "Textfarbe für das Cursorelement"
+msgstr "Textfarbe des Cursorelements"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ACTIONS
 #: ../exo/exo-icon-chooser-dialog.c:85
@@ -234,11 +234,11 @@ msgstr "Die Breite, die für jedes Element verwendet wird"
 
 #: ../exo/exo-icon-view.c:720
 msgid "Layout mode"
-msgstr "Layout Modus"
+msgstr "Layout-Modus"
 
 #: ../exo/exo-icon-view.c:721
 msgid "The layout mode"
-msgstr "Der Layout Modus"
+msgstr "Der Layout-Modus"
 
 #: ../exo/exo-icon-view.c:737
 msgid "Margin"
@@ -322,7 +322,7 @@ msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
-"Die Zeitspanne nachdem das Objekt unter dem Mauscursor automatisch "
+"Die Zeitspanne, nach der das Objekt unter dem Mauscursor automatisch "
 "ausgewählt wird, wenn der Einfachklick-Modus aktiviert ist"
 
 #: ../exo/exo-icon-view.c:911
@@ -331,7 +331,7 @@ msgstr "Abstand"
 
 #: ../exo/exo-icon-view.c:912
 msgid "Space which is inserted between cells of an item"
-msgstr "Platz, der zwischen Zellen eines Elements eingefügt wird"
+msgstr "Platz, der zwischen den Zellen eines Elements eingefügt wird"
 
 #: ../exo/exo-icon-view.c:935
 msgid "Selection Box Color"
@@ -339,11 +339,11 @@ msgstr "Farbe der Auswahlbox"
 
 #: ../exo/exo-icon-view.c:936
 msgid "Color of the selection box"
-msgstr "Farbe für die Auswahlbox"
+msgstr "Farbe der Auswahlbox"
 
 #: ../exo/exo-icon-view.c:942
 msgid "Selection Box Alpha"
-msgstr "Alphawert für die Auswahlbox"
+msgstr "Alphawert der Auswahlbox"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Opacity of the selection box"
@@ -399,7 +399,7 @@ msgstr "Werkzeugleisten_stil"
 
 #: ../exo/exo-toolbars-view.c:766
 msgid "_Desktop Default"
-msgstr "_Desktop Vorgabe"
+msgstr "_Desktopvorgabe"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Icons only"
@@ -433,7 +433,7 @@ msgstr "Konnte »%s« nicht öffnen"
 #: ../exo/exo-url.c:328
 #, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr "Der URL »%s« wird nicht unterstützt"
+msgstr "Die URL »%s« wird nicht unterstützt"
 
 #: ../exo/exo-url.c:414
 #, c-format
@@ -446,7 +446,7 @@ msgstr "Spaltenabstand"
 
 #: ../exo/exo-wrap-table.c:161
 msgid "The amount of space between two consecutive columns"
-msgstr "Die Menge an Platz zwischen zwei aufeinanderfolgenden Spalten"
+msgstr "Platz zwischen zwei aufeinanderfolgenden Spalten"
 
 #: ../exo/exo-wrap-table.c:175
 msgid "Row spacing"
@@ -454,7 +454,7 @@ msgstr "Zeilenabstand"
 
 #: ../exo/exo-wrap-table.c:176
 msgid "The amount of space between two consecutive rows"
-msgstr "Die Menge an Platz zwischen zwei aufeinanderfolgenden Zeilen"
+msgstr "Platz zwischen zwei aufeinanderfolgenden Zeilen"
 
 #: ../exo/exo-wrap-table.c:190
 msgid "Homogeneous"
@@ -573,22 +573,22 @@ msgstr "Ausführbare Dateien"
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:319
 #: ../exo-helper/exo-helper-chooser.c:452
 msgid "Perl Scripts"
-msgstr "Perl Skripte"
+msgstr "Perl-Skripte"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:325
 #: ../exo-helper/exo-helper-chooser.c:458
 msgid "Python Scripts"
-msgstr "Python Skripte"
+msgstr "Python-Skripte"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:331
 #: ../exo-helper/exo-helper-chooser.c:464
 msgid "Ruby Scripts"
-msgstr "Ruby Skripte"
+msgstr "Ruby-Skripte"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:337
 #: ../exo-helper/exo-helper-chooser.c:470
 msgid "Shell Scripts"
-msgstr "Shell Skripte"
+msgstr "Shell-Skripte"
 
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
 #, c-format
@@ -636,7 +636,7 @@ msgstr "Optionen:"
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:430
 msgid "Use _startup notification"
-msgstr "Benutze _Startup Notifikation"
+msgstr "Visuelle _Startmeldung anzeigen"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid ""
@@ -653,7 +653,7 @@ msgstr ""
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:443
 msgid "Run in _terminal"
-msgstr "In _Terminal ausführen"
+msgstr "Im _Terminal ausführen"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
@@ -689,7 +689,7 @@ msgstr "Eine neue Datei im angegebenen Ordner erstellen"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Typ der zu erstellenden Datei (Application oder Link)"
+msgstr "Typ der zu erstellenden Datei (Anwendung oder Verknüpfung)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
@@ -874,15 +874,15 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Mail Reader"
-msgstr "Email-Programm"
+msgstr "E-Mail-Programm"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Das Email-Programm wird verwendet, um Emails zu\n"
-"verfassen, wenn Sie auf eine Email-Adresse klicken."
+"Das E-Mail-Programm wird verwendet, um E-Mails zu\n"
+"verfassen, wenn Sie auf eine E-Mail-Adresse klicken."
 
 #.
 #. Utilities
@@ -927,7 +927,7 @@ msgstr "Konnte den bevorzugten Webbrowser nicht einstellen"
 
 #: ../exo-helper/exo-helper-chooser.c:351
 msgid "Failed to set default Mail Reader"
-msgstr "Konnte das bevorzugte Email-Programm nicht speichern"
+msgstr "Konnte das bevorzugte E-Mail-Programm nicht speichern"
 
 #: ../exo-helper/exo-helper-chooser.c:352
 msgid "Failed to set default Terminal Emulator"
@@ -944,7 +944,7 @@ msgstr "Benutzerdefinierten Webbrowser angeben"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
-msgstr "Benutzerdefiniertes Email-Programm angeben"
+msgstr "Benutzerdefiniertes E-Mail-Programm angeben"
 
 #: ../exo-helper/exo-helper-chooser.c:537
 msgid "Choose a custom Terminal Emulator"
@@ -965,7 +965,7 @@ msgid ""
 "as default Mail Reader for Xfce:"
 msgstr ""
 "Geben Sie die Anwendung an, die Sie als\n"
-"bevorzugtes Email-Programm für Xfce\n"
+"bevorzugtes E-Mail-Programm für Xfce\n"
 "verwenden wollen:"
 
 #: ../exo-helper/exo-helper-chooser.c:544
@@ -1000,15 +1000,15 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "Wählen Sie Ihren bevorzugten Webbrowser\n"
-"aus und klicken Sie auf OK um fortzufahren."
+"aus und klicken Sie auf OK, um fortzufahren."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
-"Wählen Sie Ihr bevorzugtes Email-Programm\n"
-"aus und klicken Sie auf OK um fortzufahren."
+"Wählen Sie Ihr bevorzugtes E-Mail-Programm\n"
+"aus und klicken Sie auf OK, um fortzufahren."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:288
 msgid ""
@@ -1016,7 +1016,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Wählen Sie Ihr bevorzugtes Terminal aus\n"
-"und klicken Sie auf OK um fortzufahren."
+"und klicken Sie auf OK, um fortzufahren."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -1036,7 +1036,7 @@ msgstr "Bevorzugte Anwendungen"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Bevorzugte Anwendungen (Webbrowser, Email-Programm und Terminal)"
+msgstr "Bevorzugte Anwendungen (Webbrowser, E-Mail-Programm und Terminal)"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:3
 msgid "Xfce 4 Preferred Applications"
@@ -1060,7 +1060,7 @@ msgstr "Debian Standard-Browser"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr "Debian X Terminal-Emulator"
+msgstr "Debian X-Terminal-Emulator"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
@@ -1068,7 +1068,7 @@ msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr "Epiphany Webbrowser"
+msgstr "Epiphany-Webbrowser"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
@@ -1084,7 +1084,7 @@ msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr "Galeon Webbrowser"
+msgstr "Galeon-Webbrowser"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
@@ -1096,19 +1096,19 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Konqueror Webbrowser"
+msgstr "Konqueror-Webbrowser"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Links Textbrowser"
+msgstr "Links-Textbrowser"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Lynx Textbrowser"
+msgstr "Lynx-Textbrowser"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
-msgstr "Mozilla Webbrowser"
+msgstr "Mozilla-Webbrowser"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.in.h:1
 msgid "Mozilla Mail"
@@ -1128,7 +1128,7 @@ msgstr "NXterm"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
-msgstr "Opera Webbrowser"
+msgstr "Opera-Webbrowser"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.in.h:1
 msgid "Opera Mail"
@@ -1149,15 +1149,15 @@ msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/urxvt.desktop.in.in.h:1
 msgid "RXVT Unicode"
-msgstr "RXVT Unicode"
+msgstr "RXVT-Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr "W3M Textbrowser"
+msgstr "W3M-Textbrowser"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
-msgstr "X Terminal"
+msgstr "X-Terminal"
 
 #: ../exo-mount/exo-mount-fstab.c:92
 msgid "Unknown error"
@@ -1180,7 +1180,7 @@ msgstr "Das Gerät »%s« ist kein gültiger Datenträger"
 #: ../exo-mount/exo-mount-hal.c:595
 #, c-format
 msgid "You are not privileged to eject the volume \"%s\""
-msgstr "Sie sind nicht priviligiert den Datenträger »%s« auszuwerfen"
+msgstr "Sie sind nicht priviligiert, den Datenträger »%s« auszuwerfen"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:600
@@ -1193,7 +1193,7 @@ msgstr ""
 #: ../exo-mount/exo-mount-hal.c:831
 #, c-format
 msgid "You are not privileged to mount the volume \"%s\""
-msgstr "Sie sind nicht priviligiert den Datenträger »%s« einzubinden"
+msgstr "Sie sind nicht priviligiert, den Datenträger »%s« einzubinden"
 
 #: ../exo-mount/exo-mount-hal.c:846
 msgid ""
@@ -1207,14 +1207,14 @@ msgstr ""
 #: ../exo-mount/exo-mount-hal.c:857
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
 msgstr ""
-"Audio-CDs können nicht eingebunden werden. Benutzen Sie stattdessen Xfmedia "
+"Audio-CDs können nicht eingebunden werden. Benutzen Sie stattdessen Xfmedia, "
 "um die Audio-Tracks abzuspielen"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:942
 #, c-format
 msgid "You are not privileged to unmount the volume \"%s\""
-msgstr "Sie sind nicht priviligiert den Datenträger »%s« auszulösen"
+msgstr "Sie sind nicht priviligiert, den Datenträger »%s« auszuhängen"
 
 #. TRANSLATORS: An application is blocking a volume from being unmounted.
 #: ../exo-mount/exo-mount-hal.c:947
@@ -1237,15 +1237,15 @@ msgstr "Auswerfen statt einbinden"
 
 #: ../exo-mount/main.c:66
 msgid "Unmount rather than mount"
-msgstr "Auslösen statt einbinden"
+msgstr "Aushängen statt einbinden"
 
 #: ../exo-mount/main.c:68
 msgid "Mount by HAL device UDI"
-msgstr "Einbinden mittels einer HAL Geräte UDI"
+msgstr "Einbinden mittels einer HAL-Geräte-UDI"
 
 #: ../exo-mount/main.c:70
 msgid "Mount by HAL device UDI (not supported)"
-msgstr "Einbinden mittels einer HAL Geräte UDI (nicht unterstützt)"
+msgstr "Einbinden mittels einer HAL-Geräte-UDI (nicht unterstützt)"
 
 #: ../exo-mount/main.c:72
 msgid "Mount by device file"
@@ -1253,18 +1253,18 @@ msgstr "Einbinden mittels einer Gerätedatei"
 
 #: ../exo-mount/main.c:73
 msgid "Don't show any dialogs"
-msgstr "Keine Dialog anzeigen"
+msgstr "Keine Dialoge anzeigen"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:138
 msgid "Must specify HAL device UDI or device file"
-msgstr "Entweder muss die HAL Geräte UDI oder die Gerätedatei angegeben werden"
+msgstr "Entweder muss die HAL-Geräte-UDI oder die Gerätedatei angegeben werden"
 
 #. the caller must specify EITHER a HAL UDI or a device file
 #: ../exo-mount/main.c:146
 msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr ""
-"Es dürfen nicht gleichzeitig die HAL Geräte UDI und die Gerätedatei "
+"Es dürfen nicht gleichzeitig die HAL-Geräte-UDI und die Gerätedatei "
 "angegeben werden"
 
 #: ../exo-mount/main.c:154
@@ -1272,20 +1272,20 @@ msgid ""
 "Cannot mount by HAL device UDI, because HAL support was disabled for this "
 "build"
 msgstr ""
-"Datenträger können nicht mittels einer HAL Geräte UDI eingebunden werden, da "
+"Datenträger können nicht mittels einer HAL-Geräte-UDI eingebunden werden, da "
 "diese Version HAL nicht unterstützt"
 
 #: ../exo-mount/main.c:161
 #, c-format
 msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 msgstr ""
-"Bei der angegebenen UDI \"%s\" handelt es sich nicht um eine gültige HAL "
-"Geräte UDI"
+"Bei der angegebenen UDI \"%s\" handelt es sich nicht um eine gültige HAL-"
+"Geräte-UDI"
 
 #. the caller must not specify both eject and unmount
 #: ../exo-mount/main.c:178
 msgid "Cannot eject and unmount simultaneously"
-msgstr "Kann nicht gleichzeitig auslösen und auswerfen"
+msgstr "Kann nicht gleichzeitig aushängen und auswerfen"
 
 #: ../exo-mount/main.c:330
 #, c-format
@@ -1295,7 +1295,7 @@ msgstr "Der Datenträger »%s« konnte nicht ausgeworfen werden"
 #: ../exo-mount/main.c:332
 #, c-format
 msgid "Failed to unmount \"%s\""
-msgstr "Der Datenträger »%s« konnte nicht ausgelöst werden"
+msgstr "Der Datenträger »%s« konnte nicht ausgehängt werden"
 
 #: ../exo-mount/main.c:334
 #, c-format
@@ -1325,7 +1325,7 @@ msgstr "Der Datenträger »%s« wird ausgeworfen. Dies kann einen Moment dauern.
 #. read-only, just unmounting
 #: ../exo-mount-notify/main.c:230
 msgid "Unmounting device"
-msgstr "Datenträger auslösen"
+msgstr "Datenträger aushängen"
 
 #: ../exo-mount-notify/main.c:231
 #, c-format
@@ -1333,7 +1333,7 @@ msgid ""
 "The device \"%s\" is being unmounted by the system. Please do not remove the "
 "media or disconnect the drive."
 msgstr ""
-"Der Datenträger »%s« wird ausgelöst durch das System. Belassen Sie in dieser "
+"Der Datenträger »%s« wird durch das System ausgehängt. Belassen Sie in dieser "
 "Zeit das Medium im Computer bzw. trennen Sie das Gerät nicht noch vom "
 "Computer."
 
@@ -1419,7 +1419,7 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Falls Sie die --launch Option nicht angeben, wird exo-open alle angegebenen\n"
+"Falls Sie die --launch-Option nicht angeben, wird exo-open alle angegebenen\n"
 "URLs mit ihrem bevorzugten URL-Handler öffnen. Ansonsten können Sie\n"
 "auswählen, welche bevorzugte Anwendung Sie starten wollen, und können dann\n"
 "zusätzliche Parameter der Anwendung übergeben (z.B. kann man dem\n"
